--- a/DemoASP/Web.config
+++ b/DemoASP/Web.config
@@ -9,8 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-DemoASP-20160401094413.mdf;Initial Catalog=aspnet-DemoASP-20160401094413;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="DemoASpDbContext" connectionString="data source=LAIDUNG\SQLEXPRESS;initial catalog=DemoAsp;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    
+    <add name="DemoASpDbContext1" connectionString="data source=LAIDUNG\SQLEXPRESS;initial catalog=DemoASP1;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
