--- a/Model/App.config
+++ b/Model/App.config
@@ -10,7 +10,6 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-  <connectionStrings>
-    <add name="DemoASpDbContext" connectionString="data source=LAIDUNG\SQLEXPRESS;initial catalog=DemoAsp;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
-  </connectionStrings>
+  <connectionStrings>    
+  <add name="DemoASpDbContext1" connectionString="data source=LAIDUNG\SQLEXPRESS;initial catalog=DemoASP1;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>
 </configuration>
