--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -59,27 +59,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Dao\DonHangDao.cs" />
-    <Compile Include="EF\ChiTietDonHang.cs" />
-    <Compile Include="EF\ChiTietSanPham.cs" />
-    <Compile Include="EF\DanhMucSanPham.cs" />
-    <Compile Include="EF\DanhMucSanPhamCuaSanPham.cs" />
-    <Compile Include="EF\DemoASpDbContext.cs" />
-    <Compile Include="EF\DiaChi.cs" />
-    <Compile Include="EF\DiaChiGiaoHang.cs" />
-    <Compile Include="EF\DonHang.cs" />
-    <Compile Include="EF\GiaBanSanPham.cs" />
-    <Compile Include="EF\KhachHang.cs" />
-    <Compile Include="EF\NhomKhachHang.cs" />
-    <Compile Include="EF\NhomKhachHangCuaKhachHang.cs" />
-    <Compile Include="EF\NhomTaiKhoan.cs" />
-    <Compile Include="EF\Quyen.cs" />
-    <Compile Include="EF\SanPham.cs" />
-    <Compile Include="EF\TaiKhoan.cs" />
-    <Compile Include="EF\TaiKhoanKhachHang.cs" />
-    <Compile Include="EF\VanChuyen.cs" />
+    <Compile Include="Dao\CategoryDao.cs" />
+    <Compile Include="Dao\AdminDao.cs" />
+    <Compile Include="EF\Category.cs" />
+    <Compile Include="EF\Customer.cs" />
+    <Compile Include="EF\DemoASpDbContext1.cs" />
+    <Compile Include="EF\Manufacturer.cs" />
+    <Compile Include="EF\Order.cs" />
+    <Compile Include="EF\OrderDetail.cs" />
+    <Compile Include="EF\Product.cs" />
+    <Compile Include="EF\ProductCategory.cs" />
+    <Compile Include="EF\Role.cs" />
+    <Compile Include="EF\Store.cs" />
+    <Compile Include="ModelView\ModelCategory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ViewModel\HoaDonViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\PagedList.css" />
@@ -88,6 +81,7 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
